<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    tools:context=".activity.main.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@android:color/transparent"
        app:civ_border_width="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="M. Fadli Zein"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />

    <Button
        android:id="@+id/btn_pasang_baru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pasang_baru"
        app:layout_constraintEnd_toStartOf="@+id/btn_tagihan_terkini"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_tagihan_terkini" />

    <Button
        android:id="@+id/btn_tagihan_terkini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/tagihan_terkini"
        app:layout_constraintEnd_toStartOf="@+id/btn_history_tagihan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_pasang_baru"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <Button
        android:id="@+id/btn_history_tagihan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_tagihan"
        app:layout_constraintEnd_toStartOf="@+id/btn_tagihan_terkini"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_tagihan_terkini"
        app:layout_constraintTop_toTopOf="@id/btn_tagihan_terkini" />


    <Button
        android:id="@+id/btn_gangguan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/laporkan_gangguan"
        app:layout_constraintTop_toBottomOf="@id/btn_tagihan_terkini" />


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/btn_gangguan" />
</androidx.constraintlayout.widget.ConstraintLayout>